--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoList",
+  "name": "Todo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.8"
+    "react-native": "0.69.8",
+    "react-native-bouncy-checkbox": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
