--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "18.0.0",
     "react-native": "0.69.8",
-    "react-native-bouncy-checkbox": "^3.0.7"
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-root-toast": "^3.4.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
